[package]
name = "hodei-kubernetes-provider"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Kubernetes Provider Implementation for Hodei Jobs"
license.workspace = true

[dependencies]
# Internal dependencies
hodei-shared-types = { path = "../shared-types" }
hodei-provider-abstraction = { path = "../provider-abstraction" }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true, features = ["derive"] }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Kubernetes integration
kube = { version = "0.87", features = ["runtime", "derive", "client", "config"] }
k8s-openapi = { version = "0.20", features = ["v1_27"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { workspace = true, features = ["v4", "serde"] }

# Testing
tempfile = "3.0"

[features]
default = []
testing = []
