[package]
name = "hodei-modules"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Application modules for Hodei Pipelines - use cases"
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace core crates
hodei-core = { workspace = true }
hodei-ports = { workspace = true }
hodei-shared-types = { workspace = true }
hodei-adapters = { workspace = true }

# Workspace async and serialization
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

# Workspace utilities
uuid = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
rand = "0.8"

# Lock-free data structures and batching
crossbeam = { version = "0.8", features = ["std"] }
crossbeam-channel = "0.5"

[dev-dependencies]
