[package]
name = "hodei-pipelines-modules"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Application modules for Hodei Pipelines - use cases"
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace core crates
hodei-pipelines-core = { workspace = true }
hodei-pipelines-ports = { workspace = true }
hodei-pipelines-adapters = { workspace = true }
hodei-pipelines-proto = { workspace = true }

# Workspace async and serialization
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

# Workspace utilities
uuid = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = "0.32.0"
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
opentelemetry-otlp = "0.31.0"
dashmap = { workspace = true }
rand = "0.9.2"

# Lock-free data structures and batching
crossbeam = { version = "0.8", features = ["std"] }
crossbeam-channel = "0.5"

[dev-dependencies]
