[package]
name = "hodei-provider-abstraction"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Worker Provider Abstraction Layer for Hodei Jobs"
license.workspace = true

[dependencies]
# Internal dependencies
hodei-shared-types = { path = "../shared-types" }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true, features = ["derive"] }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Collections
dashmap = "5.5"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
testing = []
