[package]
name = "hodei-pipelines-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Hodei Pipelines Server - Monolithic Modular Architecture"
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace core crates
hodei-pipelines-domain = { workspace = true }
hodei-pipelines-ports = { workspace = true }
hodei-pipelines-application = { workspace = true }
hodei-pipelines-adapters = { workspace = true, features = [
    "docker-provider",
    "kubernetes-provider",
] }
hodei-pipelines-proto = { workspace = true }

# Workspace dependencies
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["sync"] }
tonic = { workspace = true, features = ["transport"] }
axum = { workspace = true, features = ["json", "http2", "ws"] }
tower = { workspace = true, features = ["util", "timeout"] }
tower-http = { workspace = true, features = ["cors", "trace"] }
hyper = { workspace = true, features = ["full"] }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
prometheus = { workspace = true }
config = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
serde_yaml = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
async-trait = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
flate2 = { workspace = true }

# OpenAPI / Swagger UI
utoipa = { workspace = true, features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }

# WebSocket Terminal
tokio-tungstenite = { workspace = true, features = ["native-tls"] }
portable-pty = { workspace = true }

# Database
sqlx = { workspace = true, features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
] }

[lib]
name = "hodei_server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dev-dependencies]
tempfile = { workspace = true }
