[package]
name = "hodei-shared-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Shared types and definitions for the Hodei CI/CD distributed system"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
uuid = { workspace = true, features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
