[package]
name = "hodei-shared-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Shared types and definitions for the Hodei CI/CD distributed system"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Workspace dependencies
uuid = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true, optional = true }

[features]
sqlx = ["dep:sqlx"]

[dev-dependencies]
