[package]
name = "hodei-worker-lifecycle-manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Worker Lifecycle Manager for Hodei Jobs"
license.workspace = true

[dependencies]
# Internal dependencies
hodei-shared-types = { path = "../shared-types" }
hodei-provider-abstraction = { path = "../provider-abstraction" }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true, features = ["derive"] }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { workspace = true, features = ["v4", "serde"] }

# Testing
tempfile = "3.0"

[dev-dependencies]

[features]
default = []
testing = []
