[package]
name = "hodei-worker-lifecycle-manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Worker Lifecycle Manager for Hodei Jobs"
license.workspace = true

[[bin]]
name = "worker-manager"
path = "src/main.rs"

[dependencies]
# Internal dependencies
hodei-shared-types = { path = "../shared-types" }
hodei-provider-abstraction = { path = "../provider-abstraction" }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# HTTP Server
axum = { version = "0.7", features = ["json", "http2"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }
http = { version = "1.0" }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { workspace = true, features = ["v4", "serde"] }

# Testing
tempfile = "3.0"

[dev-dependencies]

[features]
default = []
testing = []
