[package]
name = "hodei-pipelines-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Hodei Worker Protocol (HWP) protobuf definitions"
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
tokio-stream = { workspace = true }

# gRPC and Protobuf
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic-prost = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
prost-build = { workspace = true }

[lib]
name = "hodei_pipelines_proto"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
