[package]
name = "hodei-rust-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Rust SDK for Hodei CI/CD platform"

[dependencies]
# Core SDK
hodei-sdk-core = { path = "../sdk-core" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
uuid = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"
wiremock = "0.6"
tracing-subscriber = { workspace = true }

[features]
default = []
# Enable macros for DSL-like pipeline definitions
macros = []
