[package]
name = "hodei-ml-prediction"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "LSTM Neural Network for Load Prediction"
license.workspace = true

[dependencies]
# ML Framework
tch = "0.12"

# Time Series and Data Processing
polars = { version = "0.39", features = ["csv", "parquet"] }
plotters = "0.3"

# Model Persistence
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async Runtime
tokio = { workspace = true }

# Types
hodei-shared-types = { path = "../../shared-types" }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Date/Time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.12"
