[package]
name = "hodei-metrics-collection"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Metrics Collection with Prometheus and OpenTelemetry for Hodei Jobs"
license.workspace = true

[dependencies]
# Internal dependencies
hodei-shared-types = { path = "../../shared-types" }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Prometheus metrics
prometheus = "0.13"
prometheus-client = "0.22"

# HTTP server for /metrics endpoint
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
reqwest = "0.12"

[features]
default = []
