[package]
name = "hodei-concurrency-patterns"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Concurrency patterns for the Hodei CI/CD system"
license.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = "0.1"
serde = { workspace = true }
thiserror = "1.0"
tracing = "0.1"
crossbeam = "0.8"
parking_lot = { workspace = true }
